# ppfft

./: .gitignore  README.md  adjoint_ppfft.ipynb  direct_inverse.ipynb  direct_inverse.py  fast_direct_inverse.ipynb  fast_direct_inverse.py  fast_onion_peeling.ipynb  fast_onion_peeling.py  fast_reconstruction.ipynb  fast_reconstruction.py  fast_resampling.ipynb  fast_resampling.py  forward_ppfft.ipynb  frac_fft.ipynb  frac_fft.py  improvements.ipynb  inverse_toeplitz.py  iterative_inverse.ipynb  iterative_inverse.py  new_fft.ipynb  new_fft.py  nufft_resampling.ipynb  onion_peeling.ipynb  onion_peeling.py  pad.ipynb  pad.py  polar_to_pp.py  polar_to_pseudopolar.ipynb  ppfft.py  pyproject.toml  reconstruction.py  test_radon.ipynb
notebooks/: adjoint_ppfft.ipynb  direct_inverse.ipynb  fast_direct_inverse.ipynb  fast_onion_peeling.ipynb  fast_reconstruction.ipynb  fast_resampling.ipynb  forward_ppfft.ipynb  frac_fft.ipynb  improvements.ipynb  inverse_toeplitz.ipynb  iterative_inverse.ipynb  new_fft.ipynb  new_polar_to_pp.ipynb  new_ppfft_definition.ipynb  nufft_resampling.ipynb  onion_peeling.ipynb  pad.ipynb  plots.ipynb  polar_to_pp_1d.ipynb  polar_to_pseudopolar.ipynb  resample_sinogram.ipynb  sino_polar.ipynb  test_radon.ipynb
profiling/: profiling.ipynb
test/test_inverse/: test_direct_inverse.py  test_fast_direct_inverse.py  test_fast_onion_peeling.py  test_iterative_inverse.py  test_new_onion_peeling.py  test_onion_peeling.py
test/test_legacy/: test_fast_onion_peeling.py  test_iterative_inverse.py  test_legacy_ppfft.py
test/test_ppfft/: test_ppfft.py
(+34 files in other folders)
