[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.0", "wheel"]  # PEP 508 syntax
build-backend = "setuptools.build_meta"


[project]
name = "ppfft"
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "pynufft",
]


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
